<resources>
    <string name="app_name">TRADEAL</string>
    <string name="EditProfile">Edit your user profile</string>
    <string name="signOut">Sign Out</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="SignIn">Sign In</string>
    <string name="SignUp">Sign Up</string>
    <string name="Username">Username</string>
    <string name="Search">Search</string>
    <string name="SearchHint">Search traDeal</string>
    <string name="Welcome">Welcome,</string>
    <string name="weakPassword">Password is too weak, try using something more complicated</string>
    <string name="invalidEmail">Email is not valid</string>
    <string name="emailUsed">This email is already in use</string>
    <string name="description">Description</string>
    <string name="add_listing">Add Listing</string>
    <string name="title">Title</string>
    <string name="addListing">Add Listing</string>
    <string name="category">Category</string>
    <string name="home">Home</string>
    <string name="my_area">My Area</string>
    <string name="favourites">Favourites</string>
    <string name="messages">Messages</string>
    <string name="message_seller">Message Seller</string>
    <string name="ConfirmEdit">Confirm edit</string>
    <string name="delete_conversation">Delete conversation</string>
</resources>
