<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/viewListingCategoryImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"
            android:src="@drawable/baseline_category_black_24dp"
            android:layout_margin="10dp"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favorite_border_black_24dp"
            android:tint="@color/textColor_black"
            android:background="@android:color/transparent"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:id="@+id/viewListingFavouriteBtn"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="@color/textColor_black"
            android:background="@android:color/transparent"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:src="@drawable/ic_edit_black_24dp"
            android:id="@+id/editListingBtn"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/viewListingTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/title"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/textColor_black"/>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewListingImageViewPager"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:layout_below="@+id/viewListingTitleTv"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewListingImageViewPager"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal|center_vertical"
            android:id="@+id/viewListingDotsLL"/>


        <TextView
            android:id="@+id/viewListingDescriptionTv"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewListingDotsLL"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:fadeScrollbars="true"
            android:overScrollMode="ifContentScrolls"
            android:text="@string/description"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/textColor_black"/>

        <RelativeLayout
            android:id="@+id/userLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewListingDescriptionTv"
            android:background="@drawable/background_user_layout"
            android:clickable="true"
            android:focusable="true">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/textColor_black"/>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                app:cardCornerRadius="40dp"
                android:layout_centerVertical="true"
                android:layout_margin="10dp"
                android:id="@+id/userImageCardView">

                <ImageView
                    android:id="@+id/viewListingUserImage"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_person_black_24dp"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Username"
                android:textStyle="bold"
                android:textColor="@color/textColor_black"
                android:textSize="18sp"
                android:layout_toEndOf="@+id/userImageCardView"
                android:layout_marginStart="10dp"
                android:id="@+id/viewListingUserNameTv"
                android:layout_centerVertical="true"/>

            <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/textColor_black"
            android:layout_alignParentBottom="true"/>

        </RelativeLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_seller"
            android:layout_below="@+id/userLayout"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:id="@+id/messageSellerBtn"/>


    </RelativeLayout>

</ScrollView>